--- a/src/Backend/MyWebAPIStudies.Application/MyWebAPIStudies.Application.csproj
+++ b/src/Backend/MyWebAPIStudies.Application/MyWebAPIStudies.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Shared\MyWebAPIStudies.Communication\MyWebAPIStudies.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\MyWebAPIStudies.Exceptions\MyWebAPIStudies.Exceptions.csproj" />
     <ProjectReference Include="..\MyWebAPIStudies.Domain\MyWebAPIStudies.Domain.csproj" />
