feat: Foi implementado a estrutuda de comunicação, criação e validação dos dados existentes. Também foi feita a injeção de dependencia para algumas classes.

--- a/src/Backend/MyWebAPIStudies.API/MyWebAPIStudies.API.csproj
+++ b/src/Backend/MyWebAPIStudies.API/MyWebAPIStudies.API.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\..\Shared\MyWebAPIStudies.Communication\MyWebAPIStudies.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\MyWebAPIStudies.Exceptions\MyWebAPIStudies.Exceptions.csproj" />
     <ProjectReference Include="..\MyWebAPIStudies.Application\MyWebAPIStudies.Application.csproj" />
+    <ProjectReference Include="..\MyWebAPIStudies.Infrastructure\MyWebAPIStudies.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
