--- a/src/Backend/MyWebAPIStudies.API/appsettings.Development.json
+++ b/src/Backend/MyWebAPIStudies.API/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "Connection": "Server=localhost;Database=Cliente01;Uid=root;Pwd=senha@123;"
+    },
+    "Settings": {
+        "Password": {            "AdditionalKey": "helloPassword"
+        }
     }
-  }
 }
