feat: Foi implementado os projetos de testes para validar as implementações criadas.

--- a/src/Backend/MyWebAPIStudies.API/appsettings.Development.json
+++ b/src/Backend/MyWebAPIStudies.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "Connection": "Server=localhost;Database=Cliente01;Uid=root;Pwd=senha@123;"
+        "Connection": "Server=localhost;Database=MyAPIProject ;Uid=root;Pwd=senha@123;"
     },
     "Settings": {
         "Password": {            "AdditionalKey": "helloPassword"
