--- a/src/Backend/MyWebAPIStudies.API/MyWebAPIStudies.API.csproj
+++ b/src/Backend/MyWebAPIStudies.API/MyWebAPIStudies.API.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\MyWebAPIStudies.Infrastructure\MyWebAPIStudies.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(AssemblyName).Test</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
